height of options on mobiles fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,3 @@
-
-
 header {
     width: 100;
     padding-top: 2rem;
@@ -36,7 +34,7 @@ button {
     background-color: black;
     color: white;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: auto;
 }
 
